@@ -2,13 +2,16 @@
 package org.jetbrains.plugins.groovy.codeInspection.control.finalVar;
 
 import com.intellij.codeInspection.LocalQuickFix;
+import com.intellij.codeInspection.ProblemDescriptor;
 import com.intellij.codeInspection.ProblemHighlightType;
+import com.intellij.codeInspection.util.InspectionMessage;
 import com.intellij.psi.PsiAnnotation;
 import com.intellij.psi.PsiClass;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiField;
 import com.intellij.psi.PsiMethod;
 import com.intellij.psi.PsiModifier;
+import com.intellij.psi.PsiModifierList;
 import com.intellij.psi.impl.light.LightElement;
 import com.intellij.psi.util.PsiTreeUtil;
 import com.intellij.util.SmartList;
@@ -20,6 +23,7 @@ import org.jetbrains.annotations.Unmodifiable;
 import org.jetbrains.plugins.groovy.GroovyBundle;
 import org.jetbrains.plugins.groovy.codeInspection.BaseInspection;
 import org.jetbrains.plugins.groovy.codeInspection.BaseInspectionVisitor;
+import org.jetbrains.plugins.groovy.codeInspection.bugs.GrModifierFix;
 import org.jetbrains.plugins.groovy.codeInspection.utils.ControlFlowUtils;
 import org.jetbrains.plugins.groovy.lang.psi.GrControlFlowOwner;
 import org.jetbrains.plugins.groovy.lang.psi.GroovyFile;
@@ -42,7 +46,6 @@ import org.jetbrains.plugins.groovy.lang.psi.api.statements.typedef.GrTypeDefini
 import org.jetbrains.plugins.groovy.lang.psi.api.statements.typedef.members.GrEnumConstant;
 import org.jetbrains.plugins.groovy.lang.psi.api.statements.typedef.members.GrMethod;
 import org.jetbrains.plugins.groovy.lang.psi.controlFlow.ReadWriteVariableInstruction;
-import org.jetbrains.plugins.groovy.lang.psi.controlFlow.VariableDescriptor;
 import org.jetbrains.plugins.groovy.lang.psi.controlFlow.impl.ControlFlowBuilder;
 import org.jetbrains.plugins.groovy.lang.psi.controlFlow.impl.GrFieldControlFlowPolicy;
 import org.jetbrains.plugins.groovy.lang.psi.controlFlow.impl.GroovyControlFlow;
@@ -58,6 +61,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Function;
 
 /**
  * @author Max Medvedev
@@ -120,23 +124,20 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
 
           if (PsiUtil.isLValue(ref)) {
             if (containingClass == null || !PsiTreeUtil.isAncestor(containingClass, ref, true)) {
-              registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.field.0", field.getName()), LocalQuickFix.EMPTY_ARRAY,
-                            ProblemHighlightType.GENERIC_ERROR_OR_WARNING);
+              registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.field.0", field.getName()));
             }
           }
           else if (PsiUtil.isUsedInIncOrDec(ref)) {
             if (containingClass == null || !isInsideConstructorOrInitializer(containingClass, ref, field.hasModifierProperty(PsiModifier.STATIC))) {
-              registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.field.0", field.getName()), LocalQuickFix.EMPTY_ARRAY,
-                            ProblemHighlightType.GENERIC_ERROR_OR_WARNING);
+              registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.field.0", field.getName()));
             }
           }
         }
-        else if (resolved instanceof GrParameter &&
-                 ((GrParameter)resolved).getDeclarationScope() instanceof GrMethod &&
-                 ((GrParameter)resolved).hasModifierProperty(PsiModifier.FINAL) &&
+        else if (resolved instanceof GrParameter parameter &&
+                 parameter.getDeclarationScope() instanceof GrMethod &&
+                 parameter.hasModifierProperty(PsiModifier.FINAL) &&
                  PsiUtil.isUsedInIncOrDec(ref)) {
-          registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.parameter.0", ((GrParameter)resolved).getName()),
-                        LocalQuickFix.EMPTY_ARRAY, ProblemHighlightType.GENERIC_ERROR_OR_WARNING);
+          registerError(ref, GroovyBundle.message("cannot.assign.a.value.to.final.parameter.0", parameter.getName()));
         }
       }
 
@@ -191,20 +192,19 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
       private void processLocalVars(@NotNull GroovyPsiElement scope) {
         final MultiMap<PsiElement, GrVariable> scopes = collectVariables(scope);
 
-        for (final Map.Entry<PsiElement, Collection<GrVariable>> entry : scopes.entrySet()) {
+        for (Map.Entry<PsiElement, Collection<GrVariable>> entry : scopes.entrySet()) {
           final PsiElement scopeToProcess = entry.getKey();
 
           final Set<GrVariable> forInParameters = new HashSet<>();
           final Set<GrVariable> variables = new HashSet<>();
-          for (final GrVariable var : entry.getValue()) {
+          for (GrVariable var : entry.getValue()) {
             variables.add(var);
-            if (var instanceof GrParameter && ((GrParameter)var).getDeclarationScope() instanceof GrForStatement) {
+            if (var instanceof GrParameter parameter && parameter.getDeclarationScope() instanceof GrForStatement) {
               forInParameters.add(var);
             }
           }
 
-          final GroovyControlFlow flow = getFlow(scopeToProcess);
-          highlightInvalidWriteAccess(flow, variables, forInParameters);
+          highlightInvalidWriteAccess(getFlow(scopeToProcess), variables, forInParameters);
         }
       }
 
@@ -217,17 +217,25 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
         if (result == null) return;
 
         for (ReadWriteVariableInstruction instruction : result) {
-          VariableDescriptor descriptor = flow.getVarIndices()[instruction.getDescriptor()];
-          if (!(descriptor instanceof ResolvedVariableDescriptor d)) continue;
-          GrVariable variable = d.getVariable();
+          if (!(flow.getVarIndices()[instruction.getDescriptor()] instanceof ResolvedVariableDescriptor descriptor)) continue;
+          GrVariable variable = descriptor.getVariable();
           PsiElement element = instruction.getElement();
-          if (variables.contains(variable) && element != null) {
+          if (variables.contains(variable) && element instanceof GrReferenceExpression ref) {
             String message = GroovyBundle.message(variable instanceof GrField
                                                   ? "cannot.assign.a.value.to.final.field.0"
                                                   : "cannot.assign.a.value.to.final.variable.0", variable.getName());
-            registerError(element, message, LocalQuickFix.EMPTY_ARRAY, ProblemHighlightType.GENERIC_ERROR_OR_WARNING);
+            registerError(ref, message);
           }
         }
+      }
+
+      private void registerError(@NotNull GrReferenceExpression anchor, @InspectionMessage @NotNull String message) {
+        Function<ProblemDescriptor, PsiModifierList> function =
+          d -> d.getPsiElement() instanceof GrReferenceExpression ref
+               && ref.resolve() instanceof GrVariable var ? var.getModifierList() : null;
+        GrModifierFix fix = new GrModifierFix(GroovyBundle.message("change.modifier.not", anchor.getReferenceName(), PsiModifier.FINAL),
+                                              PsiModifier.FINAL, false, function);
+        registerError(anchor, message, new LocalQuickFix[] {fix}, ProblemHighlightType.GENERIC_ERROR_OR_WARNING);
       }
     };
   }
@@ -236,11 +244,11 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
     PsiElement container = ControlFlowUtils.findControlFlowOwner(place);
 
     PsiClass aClass = null;
-    if (!isStatic && container instanceof GrMethod && ((GrMethod)container).isConstructor()) {
-      aClass = ((GrMethod)container).getContainingClass();
+    if (!isStatic && container instanceof GrMethod method && method.isConstructor()) {
+      aClass = method.getContainingClass();
     }
-    else if (container instanceof GrClassInitializer && ((GrClassInitializer)container).isStatic() == isStatic) {
-      aClass = ((GrClassInitializer)container).getContainingClass();
+    else if (container instanceof GrClassInitializer initializer && initializer.isStatic() == isStatic) {
+      aClass = initializer.getContainingClass();
     }
     return aClass != null && containingClass.getManager().areElementsEquivalent(aClass, containingClass);
   }
@@ -289,7 +297,7 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
                                                                   @NotNull List<? extends GrField> fields,
                                                                   @NotNull Set<? super GrVariable> initializedFields) {
     final List<GrMethod> chained = getChainedConstructors(constructor);
-    chained.remove(0);
+    chained.removeFirst();
 
     for (GrMethod method : chained) {
       final GrOpenBlock block = method.getBlock();
@@ -400,9 +408,7 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
     if (fieldModifierList != null && fieldModifierList.hasExplicitVisibilityModifiers()) return false;
 
     PsiClass aClass = field.getContainingClass();
-    if (aClass == null) return false;
-
-    return GrImmutableUtils.hasImmutableAnnotation(aClass);
+    return aClass != null && GrImmutableUtils.hasImmutableAnnotation(aClass);
   }
 
   private static @NotNull List<GrMethod> getChainedConstructors(@NotNull GrMethod constructor) {
@@ -453,8 +459,8 @@ public final class GrFinalVariableAccessInspection extends BaseInspection {
   }
 
   private static @NotNull GroovyControlFlow getFlow(@NotNull PsiElement element) {
-    return element instanceof GrControlFlowOwner
-           ? ControlFlowUtils.getGroovyControlFlow((GrControlFlowOwner)element)
+    return element instanceof GrControlFlowOwner owner
+           ? ControlFlowUtils.getGroovyControlFlow(owner)
            : ControlFlowBuilder.buildControlFlow((GroovyPsiElement)element);
   }
 
